# miki

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
http/: CMakeLists.txt
http/html/: miki.css  miki.html  miki.js  miki.wasm  muki.html
http/html/ffmpeg/: basics.md
http/html/pages/: grow path.md  idelist.md  me.html  todo.md  vscode.md
http/html/pages/C++/: CRTP.md  RapidJSON.md  abort exit terminate.md  anonymous namespace.md  custom allocator.md  dll export import.md  double hash macro.md  dynamic cast.md  expression vs statement.md  gcc profile.md  gdb.md  get exported symbols.md  inner_product.md  overload explained.md  pointer to class method.md  shaders.md  stable_partition.md  system_clock conversions.md
http/html/pages/C++/Command Line/: link libraries order.md
http/html/pages/C++/STL Cookbook/: !!! Thanks To.md  automatic type deduction.md  fold expressions.md  inline variable.md
http/html/pages/C++/scott/: new.md
http/html/pages/C++/stroustrup/: concurrency.md  containers.md  function adapters.md  io optimisation.md  move semantic.md  raii.md  strings.md  terminology.md  type functions.md  variadics.md  visitor for me.md
http/html/pages/CMake/: List All Variabes.md  auto get number of cpu.md  build directory.md  minimal CMakeLists.md
http/html/pages/CUDA/: introduction.md
http/html/pages/Conan/: Force compiler version.md  create package.md
http/html/pages/Conan/dev flow/: Development flow.md
http/html/pages/Conan/intro/: all by cmake.md  conanfile.md  intro.md  profiles.md  workflows.md
http/html/pages/Docker/: Build with AWS credentials.md  Create snapshot.md  Installation.md  Restart build from last error.md  Start with custom emtrypoint.md  Ubuntu change root dir.md
http/html/pages/Docker/Kubernetes/: Cannot delete volume.md  Test with minikube.md
http/html/pages/Linux/: Battery usage of Bluetooth.md  Create folder and change to it.md  Mouse natural scrolling.md  Swap Caps Esc in Gnome.md  audio details.md  bluetooth command line.md  copy preserving parent.md  create and apply patch.md  delete lines in one file but not another.md  journalctl.md  keep cmd running after log out of ssh.md  ld.so.conf.md  mount S3.md  read file line by line.md  screen saver settings.md  show-wifi-password.md  ssh auto passphrase.md  sudo_funny_errors.md  x program on headless system.md
http/html/pages/Linux/Pop_OS/: shortcuts.md
http/html/pages/Linux/Slackware/: update.md
http/html/pages/Linux/Ubuntu/: Stop auto updates.md  change default g++ version.md  chroot from livecd.md  install X without bunch of stuff.md  prevent package from updating.md  resolv.conf.md  set default editor.md  (+1 more)
http/html/pages/Makefile/: intro.md
http/html/pages/Mirriad/: JIRA formatting.md  ShotGrid2.md  conan install package.md  conan.md  conancenter-git.md
http/html/pages/NVIDIA/: linux.md
http/html/pages/OpenSSL/: into.md
http/html/pages/Qt/: Errors.md  Signals and Slots.md
http/html/pages/SQLite/: rowid.md
http/html/pages/Slackware/: slackbuild.md
http/html/pages/Video/: transcoding.md
http/html/pages/Windows/: PowerShell vi mode.md  WSL fogotten password.md  change mouse wheel direction.md  long path for 10+.md  swap caps esc.md
http/html/pages/algorithms/: logarithms.md
http/html/pages/asio/: boost-asio.md  daemon.md
http/html/pages/c++/: abort exit terminate.md  compiler.md  const ref lifespan.md  dynamic cast.md  inheritance types.md  lock_guard vs unique_lock.md  reference wrapper.md  trythisone.md  virtual inheritance.md
http/html/pages/ffmpeg/: basics.md  dB amplitude conversion.md  definitions.md  streams.md
http/html/pages/gdb/: shared library.md
http/html/pages/git/: copy only certain files from another branch.md  list only modified files.md  movebranch.md  remove commit from history.md  show remote.md  tig commit.md  undo last commit.md  what is about to be pushed.md
http/html/pages/home/: have i paid this.md  service contracts.md
http/html/pages/i3/: rofi.md  start window floating.md
http/html/pages/macOS/: Show hidden folders.md
http/html/pages/ncurses/: Cheat Sheet.md
http/html/pages/node addon api/: parse json.md
http/html/pages/qutebrowser/: cheatsheet.md
http/html/pages/shell scripts/: What Console Can do.md  read file line by line and use it for replace.md  read file line by line.md  rename multiple files.md  sed non greedy.md
http/html/pages/tests/: test.md
http/html/pages/vim/: Windows compiler version.md  __my_vimrc.md  binary_search.md  buffer to new tab.md  clang-format skip section.md  ctags for c++ generation.md  execute macro on multiple lines.md  format JSON.md  git via fugitive.md  git_via_fugitive.md  goto next warning.md  replace ctrl-m.md  replace tabs with spaces.md  set make.md
http/html/pages/vocabilary/: algorighms.md
http/src/: accessor.cpp  main.cpp
http/templates/: miki_main.html
src/: MimeTypes.h  (+10 more)
(+79 files in other folders)
